cmake_minimum_required(VERSION 3.30)
project(CPP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Weffc++ -Wextra -Wconversion -Wsign-conversion -Werror")
add_executable(CPP main.cpp)
#add_executable(ch0_8 ch0/0.8.cpp)
#add_executable(ch0_11 ch0/0.11.cpp)
add_subdirectory(ch0)
add_subdirectory(ch1)
add_subdirectory(ch2)