cmake_minimum_required(VERSION 3.30)
project(CPP)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Weffc++ -Wextra -Wconversion -Wsign-conversion -Werror")

include_directories(${PROJECT_SOURCE_DIR}/headers)
add_executable(CPP main.cpp)
add_subdirectory(ch0)
add_subdirectory(ch1)
add_subdirectory(ch2)
add_subdirectory(ch3)
add_subdirectory(ch4)
add_subdirectory(ch5)
add_subdirectory(ch6)