add_executable(ch10_1 10.1.cpp)
add_executable(ch10_2 10.2.cpp)
add_executable(ch10_3 10.3.cpp)
add_executable(ch10_4 10.4.cpp)
add_executable(ch10_5 10.5.cpp)
add_executable(ch10_6 10.6.cpp)
add_executable(ch10_7 10.7.cpp)
add_executable(ch10_8 10.8.cpp)
add_executable(ch10_X 10.X.cpp)
add_executable(ch10_7_1 10.7_1.cpp)
