add_executable(ch11_1 11.1.cpp)
add_executable(ch11_2 11.2.cpp)
add_executable(ch11_3 11.3.cpp)
add_executable(ch11_4 11.4.cpp)
add_executable(ch11_5 11.5.cpp)
add_executable(ch11_6 11.6.cpp)
add_executable(ch11_7 11.7.cpp)
add_executable(ch11_8 11.8.cpp)
add_executable(ch11_9 11.9.cpp)
add_executable(ch11_9_1 11.9_1.cpp)
add_executable(ch11_10 foo.cpp 11.10.cpp)
add_executable(ch11_X_2 11.X_2.cpp)
