add_executable(ch12_2 12.2.cpp)
add_executable(ch12_3 12.3.cpp)
add_executable(ch12_4 12.4.cpp)
add_executable(ch12_5 12.5.cpp)
add_executable(ch12_6 12.6.cpp)
add_executable(ch12_7 12.7.cpp)
add_executable(ch12_8 12.8.cpp)
add_executable(ch12_9 12.9.cpp)
add_executable(ch12_10 12.10.cpp)
add_executable(ch12_11 12.11.cpp)
#add_executable(ch11_9_1 11.9_1.cpp)
#add_executable(ch11_10 foo.cpp 11.10.cpp)
#add_executable(ch11_X_2 11.X_2.cpp)
