add_executable(ch7_1 7.1.cpp)
add_executable(ch7_2 add.cpp 7.2.cpp)
add_executable(ch7_3 7.3.cpp)
add_executable(ch7_3_1 7.3_1.cpp)
#add_executable(ch6_3_2 6.3_2.cpp)
#add_executable(ch6_4 6.4.cpp)
#add_executable(ch6_5 6.5.cpp)
#add_executable(ch6_6 6.6.cpp)
#add_executable(ch6_7 6.7.cpp)
#add_executable(ch6_8 6.8.cpp)
#add_executable(ch6_X 6.X.cpp)
