add_executable(ch8_2 8.2.cpp)
add_executable(ch8_4 8.4.cpp)
add_executable(ch8_5 8.5.cpp)
add_executable(ch8_6 8.6.cpp)
add_executable(ch8_6_1 8.6_1.cpp)
add_executable(ch8_7 8.7.cpp)
add_executable(ch8_8 8.8.cpp)
add_executable(ch8_8_2 8.8_2.cpp)
add_executable(ch8_8_3 8.8_3.cpp)
add_executable(ch8_8_4 8.8_4.cpp)
add_executable(ch8_9 8.9.cpp)
add_executable(ch8_10 8.10.cpp)
add_executable(ch8_10_1 8.10_1.cpp)
add_executable(ch8_10_2 8.10_2.cpp)
add_executable(ch8_10_4 8.10_4.cpp)
add_executable(ch8_10_5 8.10_5.cpp)
add_executable(ch8_11 8.11.cpp)
add_executable(ch8_12 8.12.cpp)
add_executable(ch8_13 8.13.cpp)
add_executable(ch8_14 8.14.cpp)
add_executable(ch8_X_1 8.X_1.cpp)
